@@ -10,7 +10,7 @@
 
 @copying
 @c man begin COPYRIGHT
-Copyright @copyright{} 1992-2019 Free Software Foundation, Inc.
+Copyright @copyright{} 1992-2020 Free Software Foundation, Inc.
 
 Permission is granted to copy, distribute and/or modify this document
 under the terms of the GNU Free Documentation License, Version 1.3 or
@@ -4595,6 +4595,9 @@ this option is given multiple times, only the last use is significant.
 @item compiler=@var{command}
 Override the defaults and use @var{command} as the compiler.  If
 this option is given multiple times, only the last use is significant.
+@item early_flags=@var{flags}
+Prepend @var{flags} to the set of arguments to be passed to the compiler.
+Multiple uses of this option specify additional arguments.
 @item additional_flags=@var{flags}
 Add @var{flags} to the set of arguments to be passed to the compiler.
 Multiple uses of this option specify additional arguments.
